[package]
name = "zora-bb"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "0.14.0"
csv = "1.3.1"
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive"] }
tabled = "0.18.0"
tokio = { version = "1.44.2", features = ["fs", "macros", "rt-multi-thread"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
